Se restructuro el JSON para a futuro si lo quieren migrar a un widget con panel administrativo

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
@@ -61,6 +61,7 @@
                     "field": "objectid_1"
                 }
             ],
+            "analysis": false,
             "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2110002"
         },
         { 
@@ -71,6 +72,7 @@
                     "field": "objectid"
                 }
             ],
+            "analysis": false,
             "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2020000"
         },
         { 
@@ -81,16 +83,18 @@
                     "field": "objectid"
                 }
             ],
+            "analysis": false,
             "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2030000"
         },
         { 
-            "name": "Recursos para respuesta",
+            "name": "Recursos Para Respuesta",
             "fields":[
                 {
                     "alias": "objectid",
                     "field": "objectid"
                 }
             ],
+            "analysis": false,
             "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2040000"
         },
         { 
@@ -101,10 +105,11 @@
                     "field": "objectid"
                 }
             ],
+            "analysis": false,
             "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2050000"
         },
         { 
-            "name": "Infraestructura vial y transporte",
+            "name": "Infraestructura Vial y Transporte",
             "srv":[
                 { 
                     "name": "Transporte",
@@ -114,6 +119,7 @@
                             "field": "objectid"
                         }
                     ],
+                    "analysis": false,
                     "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2060100"
                 },
                 { 
@@ -124,16 +130,18 @@
                             "field": "objectid"
                         }
                     ],
+                    "analysis": true,
                     "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2060200"
                 },
                 { 
-                    "name": "Red vial",
+                    "name": "Red Vial",
                     "fields":[
                         {
                             "alias": "objectid",
                             "field": "objectid"
                         }
                     ],
+                    "analysis": true,
                     "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2060300"
                 },
                 { 
@@ -144,7 +152,198 @@
                             "field": "objectid"
                         }
                     ],
+                    "analysis": false,
                     "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2060400"
+                }
+            ]
+        },
+        { 
+            "name": "Infraestructura Eléctrica y Sanitaria",
+            "srv":[
+                { 
+                    "name": "Infraestructura Eléctrica",
+                    "srv":[
+                        { 
+                            "name": "Línea de Transmisión",
+                            "fields":[
+                                {
+                                    "alias": "Objectid",
+                                    "field": "objectid"
+                                }
+                            ],
+                            "analysis": false,
+                            "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2070101"
+                        },
+                        { 
+                            "name": "Central Hidraúlica",
+                            "fields":[
+                                {
+                                    "alias": "Objectid",
+                                    "field": "objectid"
+                                }
+                            ],
+                            "analysis": false,
+                            "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2070102"
+                        },
+                        { 
+                            "name": "Central Térmica",
+                            "fields":[
+                                {
+                                    "alias": "Objectid",
+                                    "field": "objectid"
+                                }
+                            ],
+                            "analysis": false,
+                            "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2070103"
+                        }
+                    ]
+                },
+                { 
+                    "name": "Infraestructura Sanitaria",
+                    "fields":[
+                        {
+                            "alias": "ObjectID",
+                            "field": "objectid"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2070200"
+                }
+            ]
+        },
+        { 
+            "name": "Infraestructura Hídrica",
+            "srv":[
+                { 
+                    "name": "Pozos, Presas y Bocatomas",
+                    "fields":[
+                        {
+                            "alias": "objectid",
+                            "field": "objectid"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2080100"
+                },
+                { 
+                    "name": "Canales",
+                    "fields":[
+                        {
+                            "alias": "objectid",
+                            "field": "objectid"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2080200"
+                },
+                { 
+                    "name": "Reservorios",
+                    "fields":[
+                        {
+                            "alias": "objectid_1",
+                            "field": "objectid_1"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2080300"
+                },
+                { 
+                    "name": "Infraestructura de Prevención y/o Reducción",
+                    "fields":[
+                        {
+                            "alias": "objectid_1",
+                            "field": "objectid_1"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2080400"
+                }
+            ]
+        },
+        { 
+            "name": "Infraestructura para Hidrocarburos",
+            "srv":[
+                { 
+                    "name": "Refinerias",
+                    "fields":[
+                        {
+                            "alias": "objectid_1",
+                            "field": "objectid_1"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2090100"
+                },
+                { 
+                    "name": "Establecimientos",
+                    "fields":[
+                        {
+                            "alias": "objectid",
+                            "field": "objectid"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2090200"
+                },
+                { 
+                    "name": "Plantas de Abastecimiento de Combustibles Líquidos",
+                    "fields":[
+                        {
+                            "alias": "objectid",
+                            "field": "objectid_1"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2090300"
+                },
+                { 
+                    "name": "Planta Envasadora de GLP",
+                    "fields":[
+                        {
+                            "alias": "objectid",
+                            "field": "objectid_1"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2090400"
+                },
+                { 
+                    "name": "Gasoducto, Oleoducto y Poliducto",
+                    "fields":[
+                        {
+                            "alias": "objectid",
+                            "field": "objectid"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2090500"
+                }
+            ]
+        },
+        { 
+            "name": "Predios Urbanos y Rurales ",
+            "srv":[
+                { 
+                    "name": "Manzanas Referenciales 2017 01",
+                    "fields":[
+                        {
+                            "alias": "objectid_1",
+                            "field": "objectid_1"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2100300"
+                },
+                { 
+                    "name": "Manzanas Referenciales 2017 02",
+                    "fields":[
+                        {
+                            "alias": "objectid",
+                            "field": "objectid"
+                        }
+                    ],
+                    "analysis": false,
+                    "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2100400"
                 }
             ]
         }
