Se agrego el cuadro de capas de ANALYSIS para la creación del BUFFER

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
@@ -333,6 +333,7 @@
             "name": "Infraestructura vial y transporte",
             "srv": [
                 { 
+                    "id": "ID_RedFerroviaria",
                     "name": "Red Ferroviaria",
                     "fields":[
                         {
@@ -343,6 +344,7 @@
                     "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2060200"
                 },
                 { 
+                    "id": "ID_RedVial",
                     "name": "Red vial",
                     "fields":[
                         {
