Solo funciona el RADIO DE INFLUENCIA para menor o igual a 1K

--- a/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
+++ b/CENEPRED/Avance_02/viewer/js/gis/dijit/DiagnosticoTerritorial/config.json
@@ -335,23 +335,35 @@
                 { 
                     "id": "ID_RedFerroviaria",
                     "name": "Red Ferroviaria",
+                    "long": "longitud",
                     "fields":[
                         {
                             "alias": "Nombre",
                             "field": "nombre"
+                        },
+                        {
+                            "alias": "Longitud",
+                            "field": "longitud"
                         }
                     ],
+                    "color": [239, 184, 16],
                     "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2060200"
                 },
                 { 
                     "id": "ID_RedVial",
-                    "name": "Red vial",
+                    "name": "Red víal",
+                    "long": "longitud",
                     "fields":[
                         {
                             "alias": "Nombre",
                             "field": "nombre"
+                        },
+                        {
+                            "alias": "Longitud",
+                            "field": "longitud"
                         }
                     ],
+                    "color": [57,153,0],
                     "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Elementos_Expuestos/MapServer/2060300"
                 }
             ]
