Se adiciona la grilla del detalle del registro de la capa. Se muestra una capa por defecto sinembargo este defecto se puede cambiar en el config de la lista de capas

--- a/CENEPRED/Avance_03/json/config.json
+++ b/CENEPRED/Avance_03/json/config.json
@@ -336,6 +336,7 @@
                     "id": "ID_RedFerroviaria",
                     "name": "Red Ferroviaria",
                     "long": "longitud",
+                    "default": "active",
                     "fields":[
                         {
                             "alias": "Nombre",
@@ -374,6 +375,7 @@
             "name": "Información CENEPRED",
             "srv": [
                 { 
+                    "default": "active",
                     "name": "Planes PPRRD",
                     "fields":[
                         {
